fix: responsive navbar, layout issues on mobile and colors

--- a/src/app.css
+++ b/src/app.css
@@ -5,4 +5,7 @@ body {
     font-family: "Ubuntu", sans-serif;
     font-weight: 300;
     font-style: normal;
+
+    background-color: #101010;
+    color: var(--color-neutral-300);
 }
